# MCP-TEST-Agent

./: .env.example  .gitignore  Dockerfile.agent  Dockerfile.streamlit  Dockerfile.unified  STREAMLIT_DEPLOYMENT.md  create_dockerfiles.bat  deploy_all_agents.bat  deploy_cloud_run.bat  deploy_gcp.py  deploy_streamlit_agents.py  deploy_unified.bat  docker-compose.unified.yml  docker-compose.yml  streamlit_requirements.txt
FAN out-FAN in/: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_DOCUMENTATION.md  README.md  SETUP_GUIDE.md  experian_api.yaml  main.py  package.json  pyproject.toml  requirements.txt  run.py  streamlit_app.py  test_api_keys.py  test_experian.py  test_experian_gdp.py  test_system.py
FAN out-FAN in/.streamlit/: config.toml
FAN out-FAN in/loan_underwriter/: __init__.py  app.py  config.py  models.py
FAN out-FAN in/loan_underwriter/agents/: __init__.py  aggregator_agent.py  base_agent.py  credit_agent.py  fraud_agent.py  person_agent.py  property_agent.py
FAN out-FAN in/loan_underwriter/api/: __init__.py  routes.py  schemas.py  views.py
FAN out-FAN in/loan_underwriter/static/: .gitkeep
FAN out-FAN in/loan_underwriter/templates/: application.html  base.html  dashboard.html  index.html  results.html
FAN out-FAN in/sample_applications/: README.txt  sample_application_1.txt  sample_application_2.txt  sample_application_3_highvalue.txt  sample_application_4_firsttime.txt  sample_application_5_ideal_approval.txt
FAN out-FAN in/sample_applications/income_documents/: MISMATCHED_bank_statement_different_person.txt  README.md  sample_w2_john_wilson_2025.txt  (+5 more)
(+522 files in other folders)
